Don't swap versions if it is the same version

--- a/mkdocs_windmill/base.html
+++ b/mkdocs_windmill/base.html
@@ -69,8 +69,12 @@
   }
 
   function swapVersions(){
+   
     let dat = document.getElementById("versionSelect").value;
-    window.location.href = "/" + dat;
+    if(getVersion() != dat){
+      window.location.href = "/" + dat;
+    }
+    
   }
     </script>
     {% if is_top %}
