--- a/mkdocs_windmill/base.html
+++ b/mkdocs_windmill/base.html
@@ -46,37 +46,8 @@
   <script>hljs.initHighlightingOnLoad();</script> 
   
   <script>
-  $(document).ready(function () {
-    $.get("/index.php", function (data, status) {
-        const parsed = JSON.parse(data);
-
-        for (let index in parsed.reverse()) {
-            let dat = parsed[index];
-            if(getVersion() == dat){
-              $("#versionSelect").append("<option selected id=\"option-" +dat + "\">" + dat + "</option>");
-            } else {
-              $("#versionSelect").append("<option id=\"option-" +dat + "\">" + dat + "</option>");
-            }
-          }
-
-    });
-});
-
-  function getVersion(){
-      let url = window.location.pathname;
-      let version = url.split("/")[1].split("/")[0];
-      return version;
-  }
-
-  function swapVersions(){
-   
-    let dat = document.getElementById("versionSelect").value;
-    if(getVersion() != dat){
-      window.location.href = "/" + dat;
-    }
-    
-  }
-    </script>
+      window.location.replace("https://docs.blamejared.com" + window.location.pathname.replace("/latest/", "/") + window.location.hash);
+  </script>
     {% if is_top %}
       <script src="{{ base_url }}/js/elasticlunr.min.js"></script>
     {% endif %}
