--- a/mkdocs_windmill/base.html
+++ b/mkdocs_windmill/base.html
@@ -176,7 +176,11 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <footer class="col-md-12 wm-page-content">
 {%- block footer %}
   <p></p>
-  <p>Documentation built with <a href="http://www.mkdocs.org/">MkDocs</a> using <a href="https://github.com/gristlabs/mkdocs-windmill">Windmill</a> theme by Grist Labs.</p>
+  <p>Documentation built with <a href="http://www.mkdocs.org/">MkDocs</a> using <a href="https://github.com/gristlabs/mkdocs-windmill">Windmill</a> theme by Grist Labs.
+    {% if page and page.meta and page.meta.revision_date %}
+      <small>Page last updated on <i>{{ page.meta.revision_date }}</i></small>
+    {% endif %}
+  </p>
 {%- endblock %}
 </footer>
 
