--- a/mkdocs_windmill/nav-pane.html
+++ b/mkdocs_windmill/nav-pane.html
@@ -5,13 +5,13 @@
     {%- if config.repo_url %}
     <ul class="wm-toctree wm-toc-repo">
       <li class="wm-toc-li wm-toc-lev1">
-      <a class="wm-article-link wm-toc-text" href="{{ config.repo_url }}" target="_">
+      <a class="wm-article-link wm-toc-text" href="{{ config.repo_url }}" target="_blank">
         <i class="fa fa-github"></i>
         {{ config.repo_name }}
       </a>
       </li>
       <li class="wm-toc-li wm-toc-lev1">
-          <a class="wm-article-link wm-toc-text" href="https://www.patreon.com/bePatron?u=104953&s=docs" target="_">
+          <a class="wm-article-link wm-toc-text" href="https://www.patreon.com/bePatron?u=104953&s=docs" target="_blank">
               <img src="https://i.blamejared.com/patreon_logo.png" width="12" height="12">
             Support this wiki on Patreon
           </a>
