--- a/mkdocs_windmill/base.html
+++ b/mkdocs_windmill/base.html
@@ -14,7 +14,7 @@
     {%- endblock %}
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://docs.blamejared.com/og_image.png" />
-    {% if page and page.is_homepage %}<meta name="description" content="{{ config.site_description }}">{% endif %}
+    {% if page and page.is_homepage and config.site_description %}<meta name="description" content="{{ config.site_description }}">{% endif %}
     {% if config.site_author %}<meta name="author" content="{{ config.site_author }}">{% endif %}
     {% if page and page.canonical_url %}<link rel="canonical" href="{{ page.canonical_url }}">{% endif %}
     {% if config.site_favicon %}<link rel="shortcut icon" href="{{ base_url }}/{{ config.site_favicon }}">
