--- a/mkdocs_zen/main.html
+++ b/mkdocs_zen/main.html
@@ -2,19 +2,29 @@
 <html>
 <head>
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ config.site_name }}</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="/js/script.js"></script>
+    <link rel = "stylesheet" href = "/css/tailwind.css">
+    <link rel = "stylesheet" href = "/css/github-gist.css">
+    <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/simplebar@5.1.0/dist/simplebar.css"/>
+    <link rel = "stylesheet" href = "/css/style.css">
+    <script src = "//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity = "sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin = "anonymous"></script>
+    <script src = "//cdn.jsdelivr.net/npm/simplebar@5.1.0/dist/simplebar.min.js"></script>
+    <script src = "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
+    <script src = "/js/highlightjs-zenscript.js"></script>
+    <script src = "/js/script.js"></script>
+    <script>hljs.registerLanguage("zenscript", hljsZenScript);</script>
+    <script>hljs.initHighlightingOnLoad();</script>
 </head>
 
-<body>
+<body class = "bg-gray-100">
 {% include 'navbar.html' %}
-<div class="flex flex-row">
-    <div class="w-64 overflow-y-scroll max-h-with-nav border-r flex-none">
+<div class = "lg:flex flex-row">
+    <div class = "w-full lg:w-1/6 max-h-with-nav border-r flex-none lg:block hidden float-left absolute top-0 left-0 bg-gray-200 z-10" data-simplebar id="side-nav">
         {% include 'nav-pane.html' %}
     </div>
-    <div class="mx-auto overflow-y-scroll max-h-with-nav">
+    <div class = "mx-auto max-h-with-nav pt-3 w-full" id = "content" data-simplebar>
+        <div class = "w-11/12 lg:w-1/2 mx-auto text-3xl lg:text-lg">
             {{ page.content }}
+        </div>
     </div>
 </div>
 </body>
