--- a/mkdocs_zen/nav-item.html
+++ b/mkdocs_zen/nav-item.html
@@ -1,19 +1,18 @@
-<li class="wm-toc-li ml-{{ navlevel }} {% if nav_item.children %}wm-toc-opener{% endif %}">
-  {%- if nav_item.url -%}
-  <a href="{{ nav_item.url }}" class="wm-article-link wm-toc-text">{{ nav_item.title }}</a>
-  {%- else -%}
-  <span class="wm-toc-text">{{ nav_item.title }}</span>
-  {%- endif %}
-</li>
+{%- if nav_item.url -%}
+<a href = "{{ nav_item.url }}" class = "block navlev-{{ navlevel }} {% if nav_item.children %}bg-red-200{% endif %} hover:bg-gray-400 nav-item {% if navlevel == 1 %} nav-top {% endif %}">{{ nav_item.title }}</a>
+{%- else -%}
+<div class = "block nav-closed nav-item-top {% if navlevel == 1 %}nav-top{% endif %}">
+    <span class = "w-full pl-{{ navlevel }} drawer cursor-pointer inline-block hover:bg-gray-400">
+     {{ nav_item.title }}
+    </span>
 
-{%- if nav_item.children %}
-<li class="wm-toc-li-nested collapse">
-  <ul class="wm-toctree">
-    {%- set navlevel = navlevel + 1%}
-    {%- for nav_item in nav_item.children %}
-    {% include 'nav-item.html' %}
-    {%- endfor %}
-    {%- set navlevel = navlevel - 1%}
-  </ul>
-</li>
-{% endif %}
+    {%- if nav_item.children %}
+
+    <div class = "nav-item hidden">
+        {%- set navlevel = navlevel + 1%} {%- for nav_item in nav_item.children %} {% include 'nav-item.html' %} {%- endfor %} {%- set navlevel = navlevel - 1%}
+    </div>
+    {% endif %}
+</div>
+{%- endif %}
+
+
