--- a/mkdocs_zen/navbar.html
+++ b/mkdocs_zen/navbar.html
@@ -1,6 +1,17 @@
-<nav class="flex items-center justify-between flex-wrap bg-teal-500 h-16 shadow-lg">
-    <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <img class="h-12 mx-2" src="{{ base_url }}/{{ config.extra.logo }}"/>
-        <span class="text-xl tracking-tight">CraftTweaker Documentation</span>
+<nav class = "flex items-center justify-between flex-wrap bg-blue-800 h-24 lg:h-16 shadow-lg">
+    <div class = "flex items-center flex-shrink-0 text-white mr-6 my-2 lg:my-0">
+        <img class = "h-20 lg:h-12 mx-2" src = "{{ base_url }}/{{ config.extra.logo }}"/>
+        <p class = "text-3xl lg:text-xl tracking-tight">CraftTweaker Documentation</p>
+    </div>
+    <div class = "block lg:hidden pr-6">
+        <button class = "flex items-center px-3 py-2 border rounded text-teal-200 border-teal-400 hover:text-white hover:border-white" id="menu-button">
+            <svg class = "fill-current h-8 w-8" viewBox = "0 0 20 20" xmlns = "http://www.w3.org/2000/svg"><title>Menu</title>
+                <path d = "M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
+            </svg>
+        </button>
+    </div>
+    <div class = "w-full block flex-grow lg:flex lg:items-center lg:w-auto">
+        <div class = "text-sm lg:flex-grow">
+        </div>
     </div>
 </nav>
