Search page works now

--- a/mkdocs_zen/navbar.html
+++ b/mkdocs_zen/navbar.html
@@ -1,10 +1,10 @@
-<nav class="flex items-center justify-between flex-wrap bg-blue-800 h-24 md:h-16 shadow-lg z-20">
-    <a href="{{ base_url }}" class="flex items-center text-white mr-6 my-2 md:my-0">
-        <img class="h-20 md:h-12 mx-2" src="{{ base_url }}/{{ config.extra.logo }}"/>
-        <span class="text-lg tracking-tight">CraftTweaker Documentation</span>
+<nav class="flex items-center justify-between flex-wrap bg-blue-800 h-16 shadow-lg z-20">
+    <a href="{{ base_url }}" class="flex items-center text-white mr-2 my-2 md:my-0">
+        <img class="h-12 w-12 mx-2" src="{{ base_url }}/{{ config.extra.logo }}"/>
+        <span class="text-lg tracking-tight">CraftTweaker <br class="md:hidden"> Documentation</span>
     </a>
     <div class="block md:hidden pr-6">
-        <button class="flex items-center px-3 py-2 border rounded text-teal-200 border-teal-400 hover:text-white hover:border-white" id="menu-button">
+        <button class="flex items-center px-2 py-1 border rounded text-gray-200 border-gray-400 hover:text-white hover:border-white" id="menu-button">
             <svg class="fill-current h-8 w-8" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <title>
                     Menu</title>
