--- a/mkdocs_zen/main.html
+++ b/mkdocs_zen/main.html
@@ -8,18 +8,21 @@
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ config.site_name }}</title>
     <link rel = "stylesheet" href = "{{ base_url }}/css/tailwind.css">
     <link rel = "stylesheet" href = "{{ base_url }}/css/github-gist.css">
-    <link rel = "stylesheet" href = "{{ base_url }}/css/style.css">
-    <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/simplebar@5.1.0/dist/simplebar.css"/>
-    <script src = "//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity = "sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin = "anonymous"></script>
-    <script src = "//cdn.jsdelivr.net/npm/simplebar@5.1.0/dist/simplebar.min.js"></script>
-    <script src = "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
-
-    <script src = "{{ base_url }}/js/mkdocs/require.js"></script>
-    <script src = "{{ base_url }}/js/mkdocs/search.js"></script>
-    <script src = "{{ base_url }}/js/highlightjs-zenscript.js"></script>
-    <script src = "{{ base_url }}/js/script.js"></script>
-    <script>hljs.registerLanguage("zenscript", hljsZenScript);</script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <link rel="stylesheet" href="{{ base_url }}/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@5.1.0/dist/simplebar.css"/>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/simplebar@5.1.0/dist/simplebar.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
+    <script src="{{ base_url }}/js/mkdocs/require.js"></script>
+    <script src="{{ base_url }}/js/mkdocs/search.js"></script>
+    <script src="{{ base_url }}/js/highlightjs-zenscript.js"></script>
+    <script src="{{ base_url }}/js/script.js"></script>
+    <script>
+        hljs.registerLanguage("zenscript", hljsZenScript);
+    </script>
+    <script>
+        hljs.initHighlightingOnLoad();
+    </script>
 </head>
 
 <body class = "bg-gray-100">
