--- a/mkdocs_zen/search.html
+++ b/mkdocs_zen/search.html
@@ -1,53 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
         var base_url = "{{ base_url }}";
     </script>
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ config.site_name }}</title>
     <link rel = "stylesheet" href = "{{ base_url }}/css/tailwind.css">
     <link rel = "stylesheet" href = "{{ base_url }}/css/github-gist.css">
-    <link rel = "stylesheet" href = "{{ base_url }}/css/style.css">
-    <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/simplebar@5.1.0/dist/simplebar.css"/>
-    <script src = "//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity = "sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin = "anonymous"></script>
-    <script src = "//cdn.jsdelivr.net/npm/simplebar@5.1.0/dist/simplebar.min.js"></script>
-    <script src = "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
-
-    <script src = "{{ base_url }}/js/mkdocs/require.js"></script>
-    <script src = "{{ base_url }}/js/mkdocs/search.js"></script>
-    <script src = "{{ base_url }}/js/highlightjs-zenscript.js"></script>
-    <script src = "{{ base_url }}/js/script.js"></script>
-    <script>hljs.registerLanguage("zenscript", hljsZenScript);</script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <link rel="stylesheet" href="{{ base_url }}/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@5.1.0/dist/simplebar.css"/>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/simplebar@5.1.0/dist/simplebar.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
+    <script src="{{ base_url }}/js/mkdocs/require.js"></script>
+    <script src="{{ base_url }}/js/mkdocs/search_page.js"></script>
+    <script src="{{ base_url }}/js/highlightjs-zenscript.js"></script>
+    <script src="{{ base_url }}/js/script.js"></script>
+    <script>
+        hljs.registerLanguage("zenscript", hljsZenScript);
+    </script>
+    <script>
+        hljs.initHighlightingOnLoad();
+    </script>
 </head>
 
 <body class = "bg-gray-100">
 {% include 'navbar.html' %}
 <div class="md:flex flex-row">
 
-    <div class="w-full md:w-1/6 h-with-nav border-r flex-none md:block hidden float-left absolute top-0 left-0 bg-gray-200 z-10 shadow-lg" data-simplebar id="side-nav">
+    <div class="w-full md:w-64 h-with-nav border-r flex-none md:block hidden float-left absolute top-0 left-0 bg-gray-200 z-10 shadow-lg" data-simplebar id="side-nav">
         {% include 'nav-pane.html' %}
     </div>
 
     <div class="mx-auto max-h-with-nav pt-3 w-full" id="content" data-simplebar>
-        <div class="w-11/12 md:w-1/2 mx-auto text-lg">
-            <h1 id="search">Search Results</h1>
+        <div class="w-11/12 md:w-auto md:max-w-screen-sm px-4 mx-auto">
+            <h1 id="search" class="text-center">Search Results</h1>
+            <div class="w-full">
+                <div class="relative my-auto inline-block pt-2 pl-3 pr-4 w-full" id="search-container">
+                    <svg width="1rem" height="1rem" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current svg-icon absolute pointer-events-none ml-2 my-3">
+                        <path d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"/>
+                    </svg>
+                    <input class="p-2 pr-4 bg-transparent w-full" type="text" placeholder="Search" id="search-query" style="text-indent: 1.5rem"/>
 
-            <ul id="mkdocs-search-results" class="wm-search-page">
+                </div>
+            </div>
+            <div class="w-full" id="search-results">
                 Searching...
-            </ul>
+            </div>
 
-            <script>
-                const urlParams = new URLSearchParams(window.location.search);
-                const query = urlParams.get('q');
-
-                window.doSearch({
-                    resultsElem: $('#mkdocs-search-results'),
-                    query: query,
-                    snippetLen: 200,
-                    limit: 0
-                });
-            </script>
         </div>
     </div>
 
