--- a/mkdocs_zen/nav-pane.html
+++ b/mkdocs_zen/nav-pane.html
@@ -22,7 +22,7 @@
     {%- endblock %}
 
 
-    <div class="relative my-auto inline-block pt-2 pl-3 pr-4" id="search-container">
+    <div class="relative my-auto inline-block pt-2 pl-3 pr-4" id="mkdocs-search-container">
         <svg width="1rem" height="1rem" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current svg-icon absolute pointer-events-none ml-2 my-3">
             <path d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"/>
         </svg>
