upgrade to the latest mkdocs version

--- a/mkdocs_zen/main.html
+++ b/mkdocs_zen/main.html
@@ -8,7 +8,7 @@
         {% include 'nav-pane.html' %}
     </div>
     <div class="mx-auto max-h-with-nav pt-3 w-full" id="content" data-simplebar>
-        <div class="w-11/12 md:w-auto md:max-w-screen-sm px-4 mx-auto">
+        <div class="w-11/12 md:w-auto md:max-w-screen-md px-4 mx-auto">
             {{ page.content }}
         </div>
     </div>
