--- a/mkdocs_zen/head.html
+++ b/mkdocs_zen/head.html
@@ -1,4 +1,13 @@
 <head>
+    {%- if config.google_analytics %}
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ config.google_analytics[0] }}"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', '{{ config.google_analytics[0] }}');
+    </script>
+    {%- endif %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
