--- a/mkdocs_zen/nav-pane.html
+++ b/mkdocs_zen/nav-pane.html
@@ -31,7 +31,7 @@
     </div>
     <div class = "my-auto inline-block pt-2 pl-4 pr-4 flex flex-row">
         <span class = "flex-none navlev-1 py-1">Version:</span>
-        <select class = "flex-grow bg-transparent px-2 py-1" id = "versionSelect" onchange = "swapVersions()">
+        <select class = "flex-grow bg-transparent px-2 py-1" id = "version-select" onchange = "swapVersions()">
         </select>
     </div>
     <div class="my-auto block pb-1 border-b py-1 pl-3 pr-4">
