--- a/mkdocs_zen/search.html
+++ b/mkdocs_zen/search.html
@@ -8,7 +8,7 @@
         {% include 'nav-pane.html' %}
     </div>
     <div class="mx-auto max-h-with-nav pt-3 w-full" id="content" data-simplebar>
-        <div class="w-11/12 md:w-auto md:max-w-screen-sm px-4 mx-auto">
+        <div class="w-11/12 md:w-auto md:max-w-screen-md px-4 mx-auto">
             <h1 id="search" class="text-center">Search Results</h1>
             <div class="w-full">
                 <div class="relative my-auto inline-block pt-2 pl-3 pr-4 w-full" id="search-container">
