--- a/mkdocs_zen/search.html
+++ b/mkdocs_zen/search.html
@@ -15,7 +15,7 @@
                     <svg width="1rem" height="1rem" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current svg-icon absolute pointer-events-none ml-2 my-3">
                         <path d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"/>
                     </svg>
-                    <input class="p-2 pr-4 bg-transparent w-full" type="text" placeholder="Search" id="search-query" style="text-indent: 1.5rem"/>
+                    <label for = "search-query" class="sr-only">Search</label><input class="p-2 pr-4 bg-transparent w-full" type="text" placeholder="Search" id="search-query" style="text-indent: 1.5rem"/>
                 </div>
             </div>
             <div class="w-full" id="search-results">
