discord link in side bar, fixed search results being under version. ads
Look, there have always been ads, I used to have them by using a nginx subfilter on to inject them to the bottom of the page, it used to look like this https://i.blamejared.com/lliPL.png, but with this theme change they will be part of the theme themselves.

If the theme is ever published the codes will be moved to a theme config, but for now this is how it will be.

--- a/mkdocs_zen/main.html
+++ b/mkdocs_zen/main.html
@@ -1,17 +1,103 @@
 <!DOCTYPE html>
 <html>
 {% include 'head.html' %}
-<body class="bg-gray-100">
+<body class = "bg-gray-100">
 {% include 'navbar.html' %}
-<div class="md:flex flex-row">
-    <div class="w-full md:w-64 h-with-nav border-r flex-none md:block hidden float-left absolute top-0 left-0 bg-gray-200 z-10 shadow-lg" data-simplebar id="side-nav">
+<div class = "md:flex flex-row">
+    <div class = "w-full md:w-64 h-with-nav border-r flex-none md:block hidden float-left absolute top-0 left-0 bg-gray-200 z-10 shadow-lg" data-simplebar id = "side-nav">
         {% include 'nav-pane.html' %}
     </div>
-    <div class="mx-auto max-h-with-nav pt-3 w-full" id="content" data-simplebar>
-        <div class="w-11/12 md:w-auto md:max-w-screen-md px-4 mx-auto">
-            {{ page.content }}
+    <div class = "mx-auto max-h-with-nav pt-3 pb-16 w-full" id = "content" data-simplebar>
+        <div class = "w-11/12 md:w-auto md:max-w-screen-lg px-4 mx-auto">
+            <div class = "md:flex flex-row">
+                <div class = "w-full md:w-1/4 flex flex-col justify-between">
+                    <div class = "w-full md:w-11/12">
+                        <script async src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                        <ins class = "adsbygoogle"
+                             style = "display:block"
+                             data-ad-client = "ca-pub-7211841189345460"
+                             data-ad-slot = "2785889097"
+                             data-ad-format = "auto"
+                             data-full-width-responsive = "true"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                    </div>
+                    <div class = "w-full md:w-11/12 hidden md:block">
+                        <script async src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                        <ins class = "adsbygoogle"
+                             style = "display:block"
+                             data-ad-client = "ca-pub-7211841189345460"
+                             data-ad-slot = "5174542427"
+                             data-ad-format = "auto"
+                             data-full-width-responsive = "true"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                    </div>
+                </div>
+                <div class = "w-full md:w-1/2 mx-auto">
+                    {{ page.content }}
+                </div>
+                <div class = "w-full md:w-1/4 flex flex-col justify-between">
+                    <div class = "w-full md:w-11/12">
+                        <script async src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                        <ins class = "adsbygoogle"
+                             style = "display:block"
+                             data-ad-client = "ca-pub-7211841189345460"
+                             data-ad-slot = "6866063899"
+                             data-ad-format = "auto"
+                             data-full-width-responsive = "true"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                    </div>
+                    <div class = "w-full md:w-11/12 hidden md:block">
+                        <script async src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                        <ins class = "adsbygoogle"
+                             style = "display:block"
+                             data-ad-client = "ca-pub-7211841189345460"
+                             data-ad-slot = "4624233302"
+                             data-ad-format = "auto"
+                             data-full-width-responsive = "true"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 </body>
 </html>
+
+<!--sub_filter '</head>' '-->
+<!--<script data-ad-client = "ca-pub-7211841189345460" async src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>\n-->
+<!--<script type = "text/javascript">var _gaq = _gaq || [];-->
+<!--_gaq.push(["_setAccount", "UA-130251586-3"]);-->
+<!--_gaq.push(["_trackPageview"]);-->
+<!--(function () {-->
+<!--    var ga = document.createElement("script");-->
+<!--    ga.type = "text/javascript";-->
+<!--    ga.async = true;-->
+<!--    ga.src = "https://ssl.google-analytics.com/ga.js";-->
+<!--    var s = document.getElementsByTagName("script")[0];-->
+<!--    s.parentNode.insertBefore(ga, s);-->
+<!--})();</script>\n</head>';-->
+
+<!--sub_filter '</footer>' '</footer>-->
+<!--<div class = "center-block">-->
+<!--    <div class = "wm-page-content">-->
+<!--        <div class = "col-md-6" style>-->
+<!--            <script async src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
+<!--            <ins class = "adsbygoogle wm-page-content" style = "display:block" data-ad-client = "ca-pub-7211841189345460" data-ad-slot = "7072454828" data-ad-format = "auto" data-full-width-responsive = "true"></ins>-->
+<!--            <script>     (adsbygoogle = window.adsbygoogle || []).push({});</script>-->
+<!--        </div>-->
+<!--        <div class = "col-md-6">-->
+<!--            <script async src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
+<!--            <ins class = "adsbygoogle  wm-page-content" style = "display:block" data-ad-client = "ca-pub-7211841189345460" data-ad-slot = "4730180751" data-ad-format = "auto" data-full-width-responsive = "true"></ins>-->
+<!--            <script>     (adsbygoogle = window.adsbygoogle || []).push({});</script>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    ';-->
